--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# MySQL properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/security_db
+spring.datasource.username=root
+spring.datasource.password=root
 
+
+# Hibernate properties
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+# For HTTP methods PUT, PATCH, DELETE
+spring.mvc.hiddenmethod.filter.enabled=true
+
+
+spring.main.allow-circular-references=true
